# ical-desktop-notification

./: Cargo.toml  LICENSE  README.md
src/: main.rs
wix/: License.rtf  main.wxs
