[package]
name = "ical-desktop-notification"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
notify-rust = "4.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web_ical = { git = "https://github.com/dilawar/web_ical" }
