[package]
name = "ical-desktop-notification"
description = "Send desktop notification when an event is about to start"
authors = [ "Dilawar Singh <dilawar_s@zohomail.in>" ]
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
notify-rust = "4.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web_ical = { git = "https://github.com/dilawar/web_ical" }
